--- a/k8s/rollout.yaml
+++ b/k8s/rollout.yaml
@@ -2,35 +2,33 @@ apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
   name: canary-demo
-  labels:
-    app: canary-demo
+  namespace: default
 spec:
-  replicas: 4
+  replicas: 3
   selector:
     matchLabels:
       app: canary-demo
-  strategy:
-    canary:
-      steps:
-        - setWeight: 10
-        - pause:
-            duration: 20
-        - setWeight: 50
-        - pause:
-            duration: 20
-        - setWeight: 100
-      trafficRouting:
-        nginx: {}      # use nginx ingress or service mesh if configured (left blank for simple service switching)
   template:
     metadata:
       labels:
         app: canary-demo
     spec:
       containers:
-        - name: canary-demo
-          image: latchudevops/argocd-canary-demo:latest
-          env:
-            - name: APP_VERSION
-              value: "v0.0.0"   # CI will replace this with the actual sha/tag
-          ports:
-            - containerPort: 8080
+      - name: app
+        image: nginx:latest
+        ports:
+        - containerPort: 80
+
+  strategy:
+    canary:
+      # REQUIRED FOR TRAFFIC ROUTING
+      stableService: canary-demo-stable
+      canaryService: canary-demo-preview
+
+      # Canary steps
+      steps:
+        - setWeight: 20
+        - pause: { duration: 30 }
+        - setWeight: 50
+        - pause: { duration: 30 }
+        - setWeight: 100
