--- a/k8s/service-stable.yaml
+++ b/k8s/service-stable.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: canary-demo-stable
+  namespace: default
 spec:
   selector:
     app: canary-demo
   ports:
-    - port: 80
-      targetPort: 8080
-  type: LoadBalancer
+  - port: 80
+    targetPort: 80
