--- a/k8s/service-preview.yaml
+++ b/k8s/service-preview.yaml
@@ -2,9 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: canary-demo-preview
+  namespace: default
 spec:
   selector:
     app: canary-demo
   ports:
-    - port: 80
-      targetPort: 8080
+  - port: 80
+    targetPort: 80
+
